# library-main

./: Dockerfile  README.md  docker-compose.dtp.yaml  docker-compose.yaml  pyproject.toml
src/: .env.example  .env.local  .env.stage  Dockerfile  main.py
src/api/: router.py
src/api/v1/: file.py  search.py
src/core/: config.py  decorators.py  exceptions.py  lifespan.py  middlewares.py
src/db/: session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 6cd3a0fcca6e_init.py  86feef568e30_init.py  b8da4b686d2f_init.py
src/db/models/: __init__.py  base.py  file.py
src/db/repository/: file.py
src/elk/: elastic.py
src/mq/: publisher.py  router.py
src/nosql/storage/: client.py  storage.py
src/s3/: client.py  storage.py
src/schemas/: base.py  file.py  message.py  mixins.py  search_result.py
src/service/: file.py  search.py
src/utils/: pdf.py
